--- a/MusicFlow/Style/MyStyles.xaml
+++ b/MusicFlow/Style/MyStyles.xaml
@@ -839,7 +839,7 @@
                                                 </DiscreteObjectKeyFrame.Value>
                                             </DiscreteObjectKeyFrame>
                                         </ObjectAnimationUsingKeyFrames>
-                                        <DoubleAnimation Storyboard.TargetName='ProgressSlider' Storyboard.TargetProperty='Opacity' To='0' Duration='0' />
+                                        <!--<DoubleAnimation Storyboard.TargetName='ProgressSlider' Storyboard.TargetProperty='Opacity' To='0' Duration='0' />-->
                                         <DoubleAnimation Storyboard.TargetName='MediaControlsCommandBar' Storyboard.TargetProperty='Opacity' To='0' Duration='0' />
                                     </Storyboard>
                                 </VisualState>
@@ -985,7 +985,7 @@
                                 </Grid.RenderTransform>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width='3*' />
-                                    <ColumnDefinition Width='2*' />
+                                    <ColumnDefinition Width='2*' MinWidth="320"/>
                                     <ColumnDefinition Width='3*' />
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
@@ -994,6 +994,14 @@
                                 </Grid.RowDefinitions>
                                 <Border x:Name="ErrorBorder" Width='320' Height='96' Grid.ColumnSpan='3' HorizontalAlignment="Center" Background='{ThemeResource SystemControlBackgroundChromeMediumBrush}' Visibility='Collapsed'>
                                     <TextBlock x:Name='ErrorTextBlock' Style="{StaticResource MediaTextBlockStyle}" TextWrapping="WrapWholeWords" Margin='12' />
+                                </Border>
+                                <Border x:Name="Left" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.RowSpan="2" Background='{ThemeResource SystemControlBackgroundChromeMediumBrush}'>
+                                    <AppBarButton x:Name='NowPlayingListButton' Style='{StaticResource AppBarButtonStyle}' Margin="64,12,12,12" HorizontalAlignment="Left" VerticalAlignment="Center">
+                                        <AppBarButton.Icon>
+                                            <FontIcon Glyph="&#xE142;" />
+                                        </AppBarButton.Icon>
+                                    </AppBarButton>
+                                    <!--<AppBarButton x:Name='asd' Style='{StaticResource AppBarButtonStyle}' Content="" FontFamily="Segoe MDL2 Assets" FontSize="28" Margin='64,12,12,12' VerticalAlignment="Center" HorizontalAlignment="Left" />-->
                                 </Border>
                                 <Border x:Name='MediaTransportControls_Timeline_Border' Grid.Column='1' Grid.Row='1' BorderThickness="1">
                                     <Grid x:Name='MediaTransportControls_Timeline_Grid'>
@@ -1007,9 +1015,9 @@
                                             <RowDefinition Height='Auto' />
                                         </Grid.RowDefinitions>
                                         <Image x:Name='CoverImage' Grid.RowSpan="3" HorizontalAlignment="Right" VerticalAlignment="Center" Height="60" Width="60" Source="ms-appx:///Assets/NewStoreLogo.scale-150.png" Margin="4"/>
-                                        <TextBlock x:Name='TitleTextBlock' Text="Song Title" TextTrimming="CharacterEllipsis" Margin='12,8,12,-8' Grid.Column="1"/>
+                                        <TextBlock x:Name='TitleTextBlock' Text="Music Flow" TextTrimming="CharacterEllipsis" Margin='12,8,12,-8' Grid.Column="1" ToolTipService.ToolTip="{Binding Text, RelativeSource={RelativeSource Mode=Self}}" />
                                         <Slider x:Name='ProgressSlider' Style='{StaticResource MediaSliderStyle}' Margin='12,0' MinWidth='120' Height='33' VerticalAlignment='Top' Grid.Column="1" Grid.Row="1" IsThumbToolTipEnabled='False' />
-                                        <ProgressBar x:Name='BufferingProgressBar' Height='4' IsIndeterminate='True' IsHitTestVisible='False' VerticalAlignment='Top' Margin='0,2,0,0' Grid.Column="1" Grid.Row="1" Visibility='Collapsed' />
+                                        <ProgressBar x:Name='BufferingProgressBar' Height='0' Width="0" IsIndeterminate='True' IsHitTestVisible='False' VerticalAlignment='Top' Margin='0,2,0,0' Grid.Column="1" Grid.Row="1" Visibility='Collapsed' />
                                         <Grid x:Name="TimeTextGrid" Margin="12,-4,12,0" Grid.Row="2" Grid.Column="1">
                                             <TextBlock x:Name='TimeElapsedElement' Style="{StaticResource MediaTextBlockStyle}" Margin="0" Text="00:00" HorizontalAlignment='Left' />
                                             <TextBlock x:Name='TimeRemainingElement' Style="{StaticResource MediaTextBlockStyle}" Text="00:00" HorizontalAlignment='Right'  />
@@ -1023,7 +1031,7 @@
                                         </AppBarButton.Icon>
                                     </AppBarButton>
                                 </Border>
-                                <Border x:Name='MediaTransportControls_Command_Border' Grid.Column='2' Grid.Row='1' HorizontalAlignment='Center'>
+                                <Border x:Name='MediaTransportControls_Command_Border' Grid.Column='2' Grid.Row='1' HorizontalAlignment='Center' VerticalAlignment="Center">
                                     <CommandBar x:Name="MediaControlsCommandBar"  Style='{StaticResource CommandBarStyle}'>
                                         <CommandBar.PrimaryCommands>
                                             <AppBarButton x:Name='StopButton' Icon='Stop' Style='{StaticResource AppBarButtonStyle}' MediaTransportControlsHelper.DropoutOrder='1' Visibility='Collapsed' />
@@ -1096,5 +1104,6 @@
             </Setter.Value>
         </Setter>
     </Style>
+    
 
 </ResourceDictionary>
