--- a/MusicFlow/Views/AlbumView.xaml
+++ b/MusicFlow/Views/AlbumView.xaml
@@ -10,7 +10,7 @@
     <Grid Name="RootScrollViewer">
         <StackPanel Orientation="Horizontal" Margin="0,-8,20,0" Height="40" HorizontalAlignment="Left" VerticalAlignment="Top">
             <TextBlock Text="Albums" FontSize="32"  Margin="20,0,0,0" Height="40" />
-            <Button Name="ShuffleButton" Content="~" ToolTipService.ToolTip="Shuffle All Songs" Margin="20,0,0,0" Click="ShuffleButton_Click"/>
+            <Button Name="ShuffleButton" Content="~" ToolTipService.ToolTip="Shuffle All Songs" Margin="20,0,0,0" Click="ShuffleButton_Click" Visibility="Collapsed"/>
         </StackPanel>
         <GridView Visibility="Visible" Name="albumView" ItemsSource="{x:Bind albumList}" SelectionMode="Extended" IsItemClickEnabled="True" ItemClick="albumView_ItemClick" Margin="10,36,0,0" ContainerContentChanging="AlbumView_ContainerContentChanging" ItemContainerTransitions="{x:Null}" Loaded="albumView_Loaded" CanDragItems="True" DragItemsStarting="albumView_DragItemsStarting" ItemContainerStyle="{StaticResource AlbumViewGridViewItem}">
             <GridView.ItemTemplate>
